--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,11 @@
               }
             ],
             "styles": [
+  "src/styles.css",
+  "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
+],
+
+            "styles": [
               "src/styles.css"
             ]
           },
@@ -88,5 +93,9 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
+  
 }
