--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@fortawesome/fontawesome-free": "^7.1.0",
     "@types/node-forge": "^1.3.14",
     "node-forge": "^1.3.1",
+    "openpgp": "^6.2.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
